# Interv.AI

./: .replit  README.md  all_in_one_app.py  app.py  pyproject.toml  requirements.txt  requirements_for_streamlit.txt
assets/: interview_rounds.py
attached_assets/: Pasted-Absolutely-Let-s-treat-this-like-a-real-world-AI-project-planning-document-detailed-structur-1745128217557.txt
pages/: interview.py  report.py
utils/: audio_processing.py  gemini_api.py  report_generator.py
